add linkedin link

--- a/index.html
+++ b/index.html
@@ -207,124 +207,124 @@
         </div>
       </div>
 
-      <div class="assessment">
-        <div class="assignment">
-          <h3>Jivin-Jazz Website</h3>
-          <a href="https://jonathanchaochen.github.io/Jivin-Jazz/" class="assignment-image" target="_blank">
-            <div class="images">
-              <img src="images/jivin-jazz-re.png" alt="Jivin Jazz">
-              <p class="reveal">Jivin-Jazz</p>
-            </div>
-          </a>
-          <div class="code">
-            <a href="https://github.com/JonathanChaochen/Jivin-Jazz">
-              <p>Code on github</p>
-            </a>
+      <div class="assignment">
+        <h3>Seekesy</h3>
+        <a href="seekesy.html" class="assignment-image" target="_blank">
+          <div class="images">
+            <img src="images/seekesy-mobile.jpg" alt="Seekesy">
+            <p class="reveal">seekesy app</p>
           </div>
-        </div>
+        </a>
 
-        <div class="assignment">
-          <h3>Timelog SPA</h3>
-          <a href="http://www.webdeveloperchao.com/timelog/" target="_blank">
-            <div class="images" class="assignment-image">
-              <img src="images/timelog.png" alt="vue.Js SPA">
-              <p class="reveal">Timelog SPA</p>
-            </div>
-
+        <div class="code">
+          <a href="https://github.com/JonathanChaochen/Seekesy">
+            <p>Private Repo</p>
           </a>
-          <div class="code">
-            <a href="https://github.com/JonathanChaochen/timelog">
-              <p>Code on github</p>
-            </a>
-          </div>
         </div>
-
-        <div class="assignment">
-          <h3>PHP Forum</h3>
-          <a href="forumvideo.html" class="assignment-image" target="_blank">
-            <div class="images">
-              <img src="images/bcpr294-re.png" alt="php forum">
-              <p class="reveal">PHP Forum</p>
-            </div>
-
-          </a>
-
-          <div class="code">
-            <a href="https://github.com/JonathanChaochen/PHP-Assignment">
-              <p>Code on github</p>
-            </a>
-          </div>
-        </div>
-
-        <div class="assignment">
-          <h3>PSP3 SPA</h3>
-          <a href="http://www.webdeveloperchao.com/angular1-psp3/" class="assignment-image" target="_blank">
-            <div class="images">
-              <img src="images/psp3-re.png" alt="AngularJS SPA">
-              <p class="reveal">PSP3 SPA</p>
-            </div>
-          </a>
-
-          <div class="code">
-            <a href="https://github.com/JonathanChaochen/angular1-psp3">
-              <p>Code on github</p>
-            </a>
-          </div>
-        </div>
-
-        <div class="assignment">
-          <h3>React Tutorial enhancement</h3>
-          <a href="http://www.webdeveloperchao.com/my-test-app/" class="assignment-image" target="_blank">
-            <div class="images">
-              <img src="images/tic.png" alt="React SPA">
-              <p class="reveal">Tic Tac Toe</p>
-            </div>
-          </a>
-
-          <div class="code">
-            <a href="https://github.com/JonathanChaochen/my-test-app">
-              <p>Code on github</p>
-            </a>
-          </div>
-        </div>
-
-        <div class="assignment">
-          <h3>Seekesy</h3>
-          <a href="seekesy.html" class="assignment-image" target="_blank">
-            <div class="images">
-              <img src="images/seekesy-mobile.jpg" alt="Seekesy">
-              <p class="reveal">seekesy app</p>
-            </div>
-          </a>
-
-          <div class="code">
-            <a href="https://github.com/JonathanChaochen/Seekesy">
-              <p>Private Repo</p>
-            </a>
-          </div>
-        </div>
-
-        <div class="assignment">
-          <h3>Seekesy Dashboard</h3>
-          <a href="https://seekesy-eaca2.firebaseapp.com/" class="assignment-image" target="_blank">
-            <div class="images">
-              <img src="images/seekesy-dashboard.png" alt="Seekesy Dashoard">
-              <p class="reveal">seekesy dashboard</p>
-            </div>
-          </a>
-
-          <div class="code">
-            <a href="https://github.com/JonathanChaochen/adventure-checklist">
-              <p>Private Repo</p>
-            </a>
-          </div>
-        </div>
-
       </div>
-      <!-- assessment ends -->
 
+      <div class="assignment">
+        <h3>Seekesy Dashboard</h3>
+        <a href="https://seekesy-eaca2.firebaseapp.com/" class="assignment-image" target="_blank">
+          <div class="images">
+            <img src="images/seekesy-dashboard.png" alt="Seekesy Dashoard">
+            <p class="reveal">seekesy dashboard</p>
+          </div>
+        </a>
+
+        <div class="code">
+          <a href="https://github.com/JonathanChaochen/adventure-checklist">
+            <p>Private Repo</p>
+          </a>
+        </div>
+      </div>
 
     </div>
+
+
+    <div class="assessment">
+      <div class="assignment">
+        <h3>Jivin-Jazz Website</h3>
+        <a href="https://jonathanchaochen.github.io/Jivin-Jazz/" class="assignment-image" target="_blank">
+          <div class="images">
+            <img src="images/jivin-jazz-re.png" alt="Jivin Jazz">
+            <p class="reveal">Jivin-Jazz</p>
+          </div>
+        </a>
+        <div class="code">
+          <a href="https://github.com/JonathanChaochen/Jivin-Jazz">
+            <p>Code on github</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="assignment">
+        <h3>Timelog SPA</h3>
+        <a href="http://www.webdeveloperchao.com/timelog/" target="_blank">
+          <div class="images" class="assignment-image">
+            <img src="images/timelog.png" alt="vue.Js SPA">
+            <p class="reveal">Timelog SPA</p>
+          </div>
+
+        </a>
+        <div class="code">
+          <a href="https://github.com/JonathanChaochen/timelog">
+            <p>Code on github</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="assignment">
+        <h3>PHP Forum</h3>
+        <a href="forumvideo.html" class="assignment-image" target="_blank">
+          <div class="images">
+            <img src="images/bcpr294-re.png" alt="php forum">
+            <p class="reveal">PHP Forum</p>
+          </div>
+
+        </a>
+
+        <div class="code">
+          <a href="https://github.com/JonathanChaochen/PHP-Assignment">
+            <p>Code on github</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="assignment">
+        <h3>PSP3 SPA</h3>
+        <a href="http://www.webdeveloperchao.com/angular1-psp3/" class="assignment-image" target="_blank">
+          <div class="images">
+            <img src="images/psp3-re.png" alt="AngularJS SPA">
+            <p class="reveal">PSP3 SPA</p>
+          </div>
+        </a>
+
+        <div class="code">
+          <a href="https://github.com/JonathanChaochen/angular1-psp3">
+            <p>Code on github</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="assignment">
+        <h3>React Tutorial enhancement</h3>
+        <a href="http://www.webdeveloperchao.com/my-test-app/" class="assignment-image" target="_blank">
+          <div class="images">
+            <img src="images/tic.png" alt="React SPA">
+            <p class="reveal">Tic Tac Toe</p>
+          </div>
+        </a>
+
+        <div class="code">
+          <a href="https://github.com/JonathanChaochen/my-test-app">
+            <p>Code on github</p>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <!-- assessment ends -->
   </div>
   <!-- row ends -->
 
@@ -352,6 +352,9 @@
       </a>
       <a href="https://github.com/JonathanChaochen" target="_blank">
         <img src="images/about/github-re.png" alt="github">
+      </a>
+      <a href="https://www.linkedin.com/in/chao-chen-6a726b122/" target="_blank">
+        <img src="images/about/linkedin-512" alt="linkedin">
       </a>
     </div>
     <div id="footer-bottom">
