position of project changed

--- a/index.html
+++ b/index.html
@@ -205,41 +205,42 @@
             </div>
           </a>
         </div>
-      </div>
 
-      <div class="assignment">
-        <h3>Seekesy</h3>
-        <a href="seekesy.html" class="assignment-image" target="_blank">
-          <div class="images">
-            <img src="images/seekesy-mobile.jpg" alt="Seekesy">
-            <p class="reveal">seekesy app</p>
-          </div>
-        </a>
-
-        <div class="code">
-          <a href="https://github.com/JonathanChaochen/Seekesy">
-            <p>Private Repo</p>
+        <div class="project">
+          <h3>Seekesy</h3>
+          <a href="seekesy.html" class="assignment-image" target="_blank">
+            <div class="images">
+              <img src="images/seekesy-mobile.jpg" alt="Seekesy">
+              <p class="reveal">seekesy app</p>
+            </div>
           </a>
+
+          <div class="code">
+            <a href="https://github.com/JonathanChaochen/Seekesy">
+              <p>Private Repo</p>
+            </a>
+          </div>
         </div>
-      </div>
 
-      <div class="assignment">
-        <h3>Seekesy Dashboard</h3>
-        <a href="https://seekesy-eaca2.firebaseapp.com/" class="assignment-image" target="_blank">
-          <div class="images">
-            <img src="images/seekesy-dashboard.png" alt="Seekesy Dashoard">
-            <p class="reveal">seekesy dashboard</p>
-          </div>
-        </a>
-
-        <div class="code">
-          <a href="https://github.com/JonathanChaochen/adventure-checklist">
-            <p>Private Repo</p>
+        <div class="project">
+          <h3>Seekesy Dashboard</h3>
+          <a href="https://seekesy-eaca2.firebaseapp.com/" class="assignment-image" target="_blank">
+            <div class="images">
+              <img src="images/seekesy-dashboard.png" alt="Seekesy Dashoard">
+              <p class="reveal">seekesy dashboard</p>
+            </div>
           </a>
+
+          <div class="code">
+            <a href="https://github.com/JonathanChaochen/adventure-checklist">
+              <p>Private Repo</p>
+            </a>
+          </div>
         </div>
       </div>
 
     </div>
+
 
 
     <div class="assessment">
@@ -354,7 +355,7 @@
         <img src="images/about/github-re.png" alt="github">
       </a>
       <a href="https://www.linkedin.com/in/chao-chen-6a726b122/" target="_blank">
-        <img src="images/about/linkedin-512" alt="linkedin">
+        <img src="images/about/linkedin-512.png" alt="linkedin">
       </a>
     </div>
     <div id="footer-bottom">
