--- a/index.html
+++ b/index.html
@@ -206,37 +206,6 @@
           </a>
         </div>
 
-        <div class="project">
-          <h3>Seekesy</h3>
-          <a href="seekesy.html" class="assignment-image" target="_blank">
-            <div class="images">
-              <img src="images/seekesy-mobile.jpg" alt="Seekesy">
-              <p class="reveal">seekesy app</p>
-            </div>
-          </a>
-
-          <div class="code">
-            <a href="https://github.com/JonathanChaochen/Seekesy">
-              <p>Private Repo</p>
-            </a>
-          </div>
-        </div>
-
-        <div class="project">
-          <h3>Seekesy Dashboard</h3>
-          <a href="https://seekesy-eaca2.firebaseapp.com/" class="assignment-image" target="_blank">
-            <div class="images">
-              <img src="images/seekesy-dashboard.png" alt="Seekesy Dashoard">
-              <p class="reveal">seekesy dashboard</p>
-            </div>
-          </a>
-
-          <div class="code">
-            <a href="https://github.com/JonathanChaochen/adventure-checklist">
-              <p>Private Repo</p>
-            </a>
-          </div>
-        </div>
       </div>
 
     </div>
@@ -244,6 +213,37 @@
 
 
     <div class="assessment">
+      <div class="assignment">
+        <h3>Seekesy</h3>
+        <a href="seekesy.html" class="assignment-image" target="_blank">
+          <div class="images">
+            <img src="images/seekesy-mobile.jpg" alt="Seekesy">
+            <p class="reveal">seekesy app</p>
+          </div>
+        </a>
+
+        <div class="code">
+          <a href="https://github.com/JonathanChaochen/Seekesy">
+            <p>Private Repo</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="assignment">
+        <h3>Seekesy Dashboard</h3>
+        <a href="https://seekesy-eaca2.firebaseapp.com/" class="assignment-image" target="_blank">
+          <div class="images">
+            <img src="images/seekesy-dashboard.png" alt="Seekesy Dashoard">
+            <p class="reveal">seekesy dashboard</p>
+          </div>
+        </a>
+
+        <div class="code">
+          <a href="https://github.com/JonathanChaochen/adventure-checklist">
+            <p>Private Repo</p>
+          </a>
+        </div>
+      </div>
       <div class="assignment">
         <h3>Jivin-Jazz Website</h3>
         <a href="https://jonathanchaochen.github.io/Jivin-Jazz/" class="assignment-image" target="_blank">
