--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
               <p class="reveal">baobar.co.nz</p>
             </div>
           </a>
-        </div>
+        </div>    <!-- end of project -->
 
-      </div>
+      </div> <!-- end of bao bar -->
 
     </div>
 
@@ -322,10 +322,9 @@
             <p>Code on github</p>
           </a>
         </div>
-      </div>
+      </div> <!-- assignment ends -->
 
-    </div>
-    <!-- assessment ends -->
+    </div>  <!-- assessment ends -->
   </div>
   <!-- row ends -->
 
