add mockup pages

--- a/index.html
+++ b/index.html
@@ -204,9 +204,11 @@
               <p class="reveal">baobar.co.nz</p>
             </div>
           </a>
-        </div>    <!-- end of project -->
+        </div>
+        <!-- end of project -->
 
-      </div> <!-- end of bao bar -->
+      </div>
+      <!-- end of bao bar -->
 
     </div>
 
@@ -254,6 +256,21 @@
         </a>
         <div class="code">
           <a href="https://github.com/JonathanChaochen/Jivin-Jazz">
+            <p>Code on github</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="assignment">
+        <h3>Mockup Page</h3>
+        <a href="http://www.webdeveloperchao.com/mockup-dominion/" class="assignment-image" target="_blank">
+          <div class="images">
+            <img src="images/mockups.png" alt="mockups">
+            <p class="reveal">Mockup Page</p>
+          </div>
+        </a>
+        <div class="code">
+          <a href="https://github.com/JonathanChaochen/mockup-dominion">
             <p>Code on github</p>
           </a>
         </div>
@@ -322,9 +339,11 @@
             <p>Code on github</p>
           </a>
         </div>
-      </div> <!-- assignment ends -->
+      </div>
+      <!-- assignment ends -->
 
-    </div>  <!-- assessment ends -->
+    </div>
+    <!-- assessment ends -->
   </div>
   <!-- row ends -->
 
